src/test/ui/parser/macro/issue-33569.stderr
error: expected identifier, found `+`
  --> $DIR/issue-33569.rs:2:8
   |
LL |     { $+ } => {
   |        ^

error: missing fragment specifier
  --> $DIR/issue-33569.rs:2:8
   |
LL |     { $+ } => {
   |        ^

error: expected one of: `*`, `+`, or `?`
  --> $DIR/issue-33569.rs:4:13
   |
LL |         $(x)(y)
   |             ^^^

error: attempted to repeat an expression containing no syntax variables matched as repeating at this depth
  --> $DIR/issue-33569.rs:4:10
   |
LL |         $(x)(y)
   |          ^^^

error: aborting due to 4 previous errors

